--- a/js-homework-2b.html
+++ b/js-homework-2b.html
@@ -4,6 +4,9 @@ function basketballScore(homeScore, awayScore) {
   if (homeScore > awayScore) {
     return 'The home team won';
   }
+  else if (homeScore == awayScore) {
+    return 'The game tied';
+  }
   else {
     return 'The away team won';
   }
@@ -12,5 +15,7 @@ var game1 = basketballScore(72, 65);
 console.log(game1);
 var game2 = basketballScore(54, 67);
 console.log(game2);
+var game3 = basketballScore(62, 62);
+console.log(game3);
 
 </script>
