--- a/js-homework-2b.html
+++ b/js-homework-2b.html
@@ -19,10 +19,10 @@ var game3 = basketballScore(62, 62);
 console.log(game3);
 
 function greetingName(yourName) {
-  if (yourName == 'Aaron') {
+  if (yourName == 'aaron') {
     return 'Hello, group member';
   }
-  else if (yourName == 'Andrew') {
+  else if (yourName == 'andrew') {
     return 'Hello, teacher';
   }
   else {
@@ -36,7 +36,7 @@ console.log(name2);
 var name3 = greetingName('Allen');
 console.log(name3);
 
-var promptName = prompt("What is your name?");
+var promptName = prompt("What is your name?").toLowerCase();
 console.log(greetingName(promptName));
 
 </script>
